2005-12-25  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* miext/Makefile.am:
	* miext/layer/*:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/dixmods/extmod/Makefile.am:
	Remove unused layer module.

2005-12-23  Alan Coopersmith  <alan.coopersmith@sun.com>

	* doc/Xserver.man.pre: 
	Change list of X server man pages in "See Also" section to list the
	ones actually included and remove the ones that are no longer.

2005-12-23  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	Make LBX configuration default to 'auto'.

2005-12-22  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/xaa/Makefile.am:
	Adjust the rules for auto-generating some source files, so that they
	work on both GNU make and FreeBSD's make.

2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-20  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Bug #5359: Fix a segfault (Mark Kettenis)

	* fb/fbpict.c:
	Fix an fb regression on A8 pictures.  (Fredrik Höglund)

2005-12-19  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/doc/man/xorg.conf.man.pre:
	Bug #5116: Refer DRI section details to dri.fd.o.

2005-12-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/doc/devel/exa-driver.txt:
	* hw/xfree86/getconfig/cfg.man.pre:
	* hw/xfree86/getconfig/getconfig.man.pre:
	Fix typos.

2005-12-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/scanpci/pci.ids: 
	* hw/xfree86/scanpci/xf86PciStdIds.h:
	Update to 2005-12-14 snapshot from pciids.sf.net

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.
	Update release string to 6.99.99.904.

2005-12-14  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/common/xf86Priv.h:
	* hw/xfree86/os-support/linux/lnx_apm.c: