@@ -1,5 +1,5 @@
 /* $Xorg: xkbInit.c,v 1.3 2000/08/17 19:53:47 cpqbld Exp $ */
-/* $XdotOrg: xc/programs/Xserver/xkb/xkbInit.c,v 1.3 2005/04/20 12:25:48 daniels Exp $ */
+/* $XdotOrg: xserver/xorg/xkb/xkbInit.c,v 1.9 2005/10/19 22:45:54 ajax Exp $ */
 /************************************************************
 Copyright (c) 1993 by Silicon Graphics Computer Systems, Inc.
 
@@ -130,8 +130,6 @@ char	*		XkbBinDirectory=	XKB_BIN_DIRECTORY;
 char	*		XkbInitialMap=		NULL;
 int	 		XkbWantAccessX=		0;	
 static XkbFileInfo *	_XkbInitFileInfo=	NULL;
-char *			XkbDB=			NULL;
-int			XkbAutoLoad=		1;
 
 static Bool		rulesDefined=		False;
 static char *		XkbRulesFile=		NULL;
@@ -497,7 +495,7 @@ XkbEventCauseRec	cause;
     file.file=NULL;
     bzero(&file.xkbinfo,sizeof(XkbFileInfo));
     bzero(&changes,sizeof(XkbChangesRec));
-    if (XkbAutoLoad && (XkbInitialMap!=NULL)) {
+    if (XkbInitialMap!=NULL) {
 	if ((file.file=XkbDDXOpenConfigFile(XkbInitialMap,NULL,0))!=NULL) {
 	    XkmReadFile(file.file,0,XkmKeymapLegal,&file.xkbinfo);
 	    if (file.xkbinfo.xkb==NULL) {
@@ -952,24 +950,6 @@ XkbProcessArguments(int argc,char *argv[],int i)
 	    return -1;
 	}
     }
-    else if (strncmp(argv[i], "-xkbdb", 7) == 0) {
-	if(++i < argc) {
-	    if (strlen(argv[i]) < PATH_MAX) {
-		XkbDB= argv[i];
-		return 2;
-	    } else {
-		LogMessage(X_ERROR, "-xkbdb pathname too long\n");
-		return -1;
-	    }
-	}
-	else {
-	    return -1;
-	}
-    }
-    else if (strncmp(argv[i], "-noloadxkb", 7) == 0) {
-	XkbAutoLoad= 0;
-	return 1;
-    }
     else if ((strncmp(argv[i],"-accessx",8)==0)||
                  (strncmp(argv[i],"+accessx",8)==0)) {
 	int j=1;	    
@@ -1008,12 +988,14 @@ XkbProcessArguments(int argc,char *argv[],int i)
 	}
 	return j;
     }
-    if (strcmp (argv[i], "-ar1") == 0) {	/* -ar1 int */
+    if ((strcmp(argv[i], "-ardelay") == 0) ||
+        (strcmp (argv[i], "-ar1") == 0)) {	/* -ardelay int */
 	if (++i >= argc) UseMsg ();
 	XkbDfltRepeatDelay = (long)atoi(argv[i]);
 	return 2;
     }
-    if (strcmp (argv[i], "-ar2") == 0) {	/* -ar2 int */
+    if ((strcmp(argv[i], "-arinterval") == 0) ||
+        (strcmp (argv[i], "-ar2") == 0)) {	/* -arinterval int */
 	if (++i >= argc) UseMsg ();
 	XkbDfltRepeatInterval = (long)atoi(argv[i]);
 	return 2;
@@ -1024,14 +1006,11 @@ XkbProcessArguments(int argc,char *argv[],int i)
 void
 XkbUseMsg(void)
 {
-    ErrorF("The X Keyboard Extension adds the following arguments:\n");
     ErrorF("-kb                    disable the X Keyboard Extension\n");
     ErrorF("+kb                    enable the X Keyboard Extension\n");
     ErrorF("[+-]accessx [ timeout [ timeout_mask [ feedback [ options_mask] ] ] ]\n");
     ErrorF("                       enable/disable accessx key sequences\n");
-    ErrorF("-ar1                   set XKB autorepeat delay\n");
-    ErrorF("-ar2                   set XKB autorepeat interval\n");
-    ErrorF("-noloadxkb             don't load XKB keymap description\n");
-    ErrorF("-xkbdb                 file that contains default XKB keymaps\n");
+    ErrorF("-ardelay               set XKB autorepeat delay\n");
+    ErrorF("-arinterval            set XKB autorepeat interval\n");
     ErrorF("-xkbmap                XKB keyboard description to load on startup\n");
 }
