@@ -1,3 +1,9 @@
+2005-12-26  Daniel Stone  <daniel@freedesktop.org>
+
+	* xkb/xkbInit.c:
+	Remove unused -xkbdb and -noloadxkb options.  Rename -ar1 and -ar2 to
+	-ardelay and -arinterval, respectively.  Remove XKB banner from help text.
+
 2005-12-25  Adam Jackson  <ajax@freedesktop.org>
 
 	* configure.ac:
